--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -36,12 +36,13 @@
                     <mat-label>Email</mat-label>
                     <input matInput placeholder="Email Address" formControlName="email">
                     <mat-error *ngIf="registerForm.controls.email.errors?.required">User ID is required</mat-error>
-                    <mat-error *ngIf="registerForm.controls.email.errors?.Invalid">email is not valid</mat-error>
+                    <mat-error *ngIf="f.email.errors?.email">Email must be a valid email address</mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex='50'>
                     <mat-label>Phone</mat-label>
-                    <input matInput placeholder="phone" type="number" formControlName="phone">
+                    <input matInput placeholder="phone" formControlName="phone" (keypress)="keyPress($event)">
                     <mat-error *ngIf="registerForm.controls.phone.errors?.required">User ID is required</mat-error>
+                    <mat-error *ngIf="f.phone.errors?.minlength">Phone Number must be 10 digit</mat-error>
                 </mat-form-field>
             </div>
             <mat-form-field appearance="outline">
