--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,10 +1,10 @@
-@import '../theme/values.scss';
-
+@import "../theme/values.scss";
 
 .left-side {
     background-image: linear-gradient(180deg, #0073ff, #691087);
     position: relative;
     border-radius: 10px 0 0 10px;
+
     & img {
         width: 75%;
         position: absolute;
@@ -19,16 +19,16 @@
         font-family: "Poppins", sans-serif;
         letter-spacing: 1px;
     }
-    
+
     & h6 {
         color: #fff;
     }
 }
 .example-chip-list {
     width: 100%;
-  }
+}
 
-.right-side{
+.right-side {
     overflow-y: scroll;
     max-height: 560px;
 }
@@ -59,22 +59,21 @@
         cursor: pointer;
         margin-top: 30px;
     }
-   
 }
- .next{
-        background: $primary;
-        outline: none;
-        border: 0;
-        color: #fff;
-        padding: 8px 55px;
-        border-radius: 5px;
-    }
-    .home img{
-        height: 55px;
-        width: 50px;
-        padding: 4px;
-    }
-    .home{
-        display: flex;
-        justify-content: center;
-    }
+.next {
+    background: $primary;
+    outline: none;
+    border: 0;
+    color: #fff;
+    padding: 8px 55px;
+    border-radius: 5px;
+}
+.home img {
+    height: 55px;
+    width: 50px;
+    padding: 4px;
+}
+.home {
+    display: flex;
+    justify-content: center;
+}
